cluster/octoprint/deployment-web.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: octoprint-deployment
  namespace: octoprint
spec:
  replicas: 1
  serviceName: octoprint
  selector:
    matchLabels:
      app: octoprint
  template:
    metadata:
      labels:
        app: octoprint
    spec:
      nodeSelector:
        hardware: 3dprinter
      containers:
        - env:
            - name: ENABLE_MJPG_STREAMER
              value: "false"
            - name: TZ
              value: America/Chicago # required for print time estimation
          # registry-proxy image-prefix
          image: cr.nathanv.app/docker.io/octoprint/octoprint:1.11.8
          name: octoprint
          securityContext:
            privileged: true # for device access
            runAsUser: 0
          ports:
            - containerPort: 80 # http server
          volumeMounts:
            - mountPath: /octoprint
              name: data-vol
            - mountPath: /dev
              name: host-dev
      volumes:
        - name: data-vol
          persistentVolumeClaim:
            claimName: octoprint-pvc
        - name: host-dev
          hostPath:
            path: /dev
            type: Directory
