cluster/octoprint/service-cam.yaml
apiVersion: v1
kind: Service
metadata:
  name: octoprint-cam-service
  namespace: octoprint
spec:
  type: ClusterIP
  selector:
    app: octoprint-webcam
  ports:
    - port: 8080
      protocol: TCP
