cluster/octoprint/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: octoprint-web-service
  namespace: octoprint
spec:
  type: ClusterIP
  selector:
    app: octoprint
  ports:
    - port: 80
      protocol: TCP
