cluster/octoprint/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octoprint-service
  namespace: octoprint
spec:
  type: ClusterIP
  selector:
    app: octoprint
  ports:
    - port: 8080
      protocol: TCP
