cluster/octoprint/ingress-cam.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: octoprint-cam-route
  namespace: octoprint
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`octoprint-cam.nathanv.app`)
      kind: Rule
      services:
        - name: octoprint-cam-service
          port: 8080
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
