cluster/octoprint/ingress-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: octoprint-web-route
  namespace: octoprint
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`octoprint.nathanv.app`)
      kind: Rule
      services:
        - name: octoprint-web-service
          port: 80
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
